OBJ file is starting to be put into memory
Vertices, normals, texture coords all now go into memory as well as the face details,
shaders will now have to be based on what will be loaded into the loader

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Model__Loader/.vs/Model__Loader/v15/Browse.VC.opendb
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/ee9f05c48d3bfb0d/MAIN.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/542ae009fd70ce0/BACKUP.ipch
