OBJ Loader complete, kinda
all vertices and texture coordinates load, the use of the mtl file needs to be implemented but maybe lighting implementations first will help?

--- a/Model__Loader/Model__Loader/Model__Loader.vcxproj
+++ b/Model__Loader/Model__Loader/Model__Loader.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="awesomeface.PNG" />
+    <Image Include="Image.png" />
     <Image Include="wall.jpg" />
   </ItemGroup>
   <ItemGroup>
