--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/56029376f826e6fd/MATERIAL.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
 *.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
