--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
 *.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
