--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/34d910ebe3d30855/MESH.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/542ae009fd70ce0/BACKUP.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/56029376f826e6fd/MATERIAL.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/ee9f05c48d3bfb0d/MAIN.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
+Model__Loader/.vs/Model__Loader/v15/Browse.VC.opendb
