--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/56029376f826e6fd/MATERIAL.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/ee9f05c48d3bfb0d/MAIN.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
 Model__Loader/.vs/Model__Loader/v15/Browse.VC.opendb
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/1aef76af574c2c4d/MAIN.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/b458b003e5084847/LOADER.ipch
