--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/eacf13e43fb83a0f/CAMERA.ipch
 Model__Loader/.vs/Model__Loader/v15/Browse.VC.opendb
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/1aef76af574c2c4d/MAIN.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/b458b003e5084847/LOADER.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/139ce6ed54992095/MESH.ipch
