--- a/Model__Loader/Model__Loader/Model__Loader.vcxproj.filters
+++ b/Model__Loader/Model__Loader/Model__Loader.vcxproj.filters
@@ -46,6 +46,7 @@
     <None Include="Media\Objects\Creeper-obj\Creeper.mtl" />
     <None Include="Media\Objects\low_poly_boat.dae" />
     <None Include="Media\Objects\Creeper-dae\Creeper.dae" />
+    <None Include="Media\Objects\Pouf.dae" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
