Basic grid floor added
- Start of creating a world for C2 demo
- grid floor is repeated by drawing a flat object repeated times, not efficient, but scalable for now
- to optimise make the whole floow one object that is drawn once

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Model__Loader/.vs/Model__Loader/v15/Browse.VC.opendb
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/1aef76af574c2c4d/MAIN.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/b458b003e5084847/LOADER.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/139ce6ed54992095/MESH.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/5f9b80143bb5e96d/MAIN.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/d1ad3fe2ea7fd6b5/MESH.ipch
