ImGui editing shaders
- ambient light can be editied
- light colour can be editied too
- camera setting window added needs functionality added
- features window needed to be implemented (will match the number keys on the keyboard)
- Code needs to be tided and split up (main code needs to be split up into functions)

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/b458b003e5084847/LOADER.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/139ce6ed54992095/MESH.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/5f9b80143bb5e96d/MAIN.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/d1ad3fe2ea7fd6b5/MESH.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/7f96033325116f5d/MATERIAL.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/f5f01bf49596a5ef/CAMERA.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/1bf3a612a4850f7e/IMGUI_DEMO.ipch
