--- a/Model__Loader/Model__Loader/imgui.ini
+++ b/Model__Loader/Model__Loader/imgui.ini
@@ -1,10 +1,20 @@
 [Window][Debug##Default]
-Pos=560,551
-Size=433,347
+Pos=1097,833
+Size=496,343
 Collapsed=0
 
 [Window][Another Window]
 Pos=1162,299
 Size=197,71
+Collapsed=0
+
+[Window][Main Settings]
+Pos=1111,859
+Size=475,326
+Collapsed=0
+
+[Window][CameraWindow]
+Pos=539,947
+Size=560,237
 Collapsed=0
 
