All windows are now added
- all windows are now added
-may need to change when later features are added
- camera speed and mouse sensitivity
- all number key features now have aseperate window for these button pushes (could these be changed to checkboxes?)
- code in need of a refractor
- code is in need for more comments

--- a/Model__Loader/Model__Loader/imgui.ini
+++ b/Model__Loader/Model__Loader/imgui.ini
@@ -18,3 +18,13 @@ Pos=539,947
 Size=560,237
 Collapsed=0
 
+[Window][Camera Settings]
+Pos=530,990
+Size=575,190
+Collapsed=0
+
+[Window][Features Settings]
+Pos=100,910
+Size=426,269
+Collapsed=0
+
