NO IDEA WHAT THIS IS DOING
Start of a new bloom branch and the code is looking pretty worrying, maybe implement more basic HDR first before trying to implement bloom?

--- a/Model__Loader/Model__Loader/Model__Loader.vcxproj.filters
+++ b/Model__Loader/Model__Loader/Model__Loader.vcxproj.filters
@@ -60,6 +60,12 @@
     <None Include="Media\Objects\Creeper-dae\Creeper.dae" />
     <None Include="Media\Objects\Pouf.dae" />
     <None Include="Media\Objects\Grid-obj\Grid.mtl" />
+    <None Include="blur.vs">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="blur.fs">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
