--- a/Model__Loader/Model__Loader/Model__Loader.vcxproj
+++ b/Model__Loader/Model__Loader/Model__Loader.vcxproj
@@ -135,6 +135,8 @@
     <ClCompile Include="Mesh.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="blur.fs" />
+    <None Include="blur.vs" />
     <None Include="Media\Objects\Creeper-dae\Creeper.dae" />
     <None Include="Media\Objects\Creeper-obj\Creeper.mtl" />
     <None Include="Media\Objects\Custom-obj\Custom.mtl" />
