FrameBufferObject for screen now working
- Framebuffer object now running for an overlay for post processing now set up
- code does need to be tidied up
- wireframe mode needed to be editited not to show FBO
- blo0m and shadows will be added to these frame buffer objects

--- a/Model__Loader/Model__Loader/Model__Loader.vcxproj
+++ b/Model__Loader/Model__Loader/Model__Loader.vcxproj
@@ -147,6 +147,8 @@
     <None Include="Media\Shaders\lightVertex.vs" />
     <None Include="Media\Shaders\mainFragment.fs" />
     <None Include="Media\Shaders\mainVertex.vs" />
+    <None Include="Media\Shaders\screenFragment.fs" />
+    <None Include="Media\Shaders\screenVertex.vs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
