frameBuffer header and cpp
- header and cpp file for frame buffer created, will use when main becomes more complex and is in need of a refractor
- post processing effects tested to be working with current screen fbo

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/d1ad3fe2ea7fd6b5/MESH.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/7f96033325116f5d/MATERIAL.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/f5f01bf49596a5ef/CAMERA.ipch
 Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/1bf3a612a4850f7e/IMGUI_DEMO.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/4198acb0844c43e3/FRAMEBUFFER.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/b77e2a2ffb4af867/LOADER.ipch
+Model__Loader/.vs/Model__Loader/v15/ipch/AutoPCH/ec9513102a4aeab2/IMGUI.ipch
