Bloom implemented (ish)
- as above
- framerate 10% as what it was before
- neaten up code to increase framerate?
- gamma and expopsure not 100%
- look into HDR too (should fix the over exposure and Gamma)

--- a/Model__Loader/Model__Loader/Model__Loader.vcxproj
+++ b/Model__Loader/Model__Loader/Model__Loader.vcxproj
@@ -148,6 +148,8 @@
     <None Include="Media\Shaders\lightVertex.vs" />
     <None Include="Media\Shaders\mainFragment.fs" />
     <None Include="Media\Shaders\mainVertex.vs" />
+    <None Include="Media\Shaders\blurVertex.vs" />
+    <None Include="Media\Shaders\blurFragment.fs" />
     <None Include="Media\Shaders\screenFragment.fs" />
     <None Include="Media\Shaders\screenVertex.vs" />
     <None Include="packages.config" />
