Shadows Kinda implemented
Shadows are implemented however,  their projection onto the grid is not accurate, it only really applies to the certain sention of the grid not the whole grid

--- a/Model__Loader/Model__Loader/Model__Loader.vcxproj
+++ b/Model__Loader/Model__Loader/Model__Loader.vcxproj
@@ -152,6 +152,8 @@
     <None Include="Media\Shaders\blurFragment.fs" />
     <None Include="Media\Shaders\screenFragment.fs" />
     <None Include="Media\Shaders\screenVertex.vs" />
+    <None Include="Media\Shaders\shadowFragment.fs" />
+    <None Include="Media\Shaders\shadowVertex.vs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
