--- a/Model__Loader/Model__Loader/Model__Loader.vcxproj.filters
+++ b/Model__Loader/Model__Loader/Model__Loader.vcxproj.filters
@@ -67,6 +67,8 @@
     <None Include="Media\Shaders\screenVertex.vs" />
     <None Include="Media\Shaders\blurVertex.vs" />
     <None Include="Media\Shaders\blurFragment.fs" />
+    <None Include="Media\Shaders\shadowFragment.fs" />
+    <None Include="Media\Shaders\shadowVertex.vs" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
